--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "hubot": "2.0.5",
     "hubot-scripts": "2.0.2",
     "optparse": "1.0.3",
-    "hubot-hipchat": "https://github.com/jmalonzo/hubot-hipchat/tarball/master",
+    "hubot-hipchat": "https://github.com/jmalonzo/hubot-hipchat/tarball/master"
   }
 }
 
