Use hubot-scripts straight from repo

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 
   "dependencies": {
     "hubot": "2.0.5",
-    "hubot-scripts": "2.0.2",
+    "hubot-scripts": "https://github.com/github/hubot-scripts/tarball/master",
     "optparse": "1.0.3",
     "hubot-hipchat": "https://github.com/jmalonzo/hubot-hipchat/tarball/master"
   }
