--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
 
   "dependencies": {
-    "hubot": "2.1.2",
+    "hubot": "2.1.3",
     "hubot-scripts": "https://github.com/github/hubot-scripts/tarball/master",
     "optparse": "1.0.3",
-    "hubot-hipchat": "https://github.com/hipchat/hubot-hipchat/tarball/master"
+    "hubot-hipchat": "1.0.3"
   }
 }
 
