--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name":        "hosted-hubot",
-  "version":     "0.2.0",
+  "version":     "2.2.0",
   "author":      "GitHub Inc.",
   "keywords":    "github hubot campfire bot hipchat",
   "description": "A simple helpful Robot for your Company",
@@ -10,15 +10,20 @@
   }],
 
   "repository" : {
-    "type" : "git",
-    "url" : "http://github.com/github/hubot.git"
+    "type": "git",
+    "url":  "https://github.com/github/hubot.git"
   },
 
   "dependencies": {
-    "hubot": "2.1.3",
-    "hubot-scripts": "https://github.com/github/hubot-scripts/tarball/master",
+    "hubot": "2.2.2",
+    "hubot-scripts": ">=2.0.8",
     "optparse": "1.0.3",
-    "hubot-hipchat": "1.0.3"
+    "hubot-hipchat": "1.0.5"
+  },
+
+  "engines": {
+    "node": "0.6.x",
+    "npm": "1.0.x"
   }
 }
 
