--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
 
   "dependencies": {
-    "hubot": "2.2.2",
+    "hubot": ">=2.2.1",
     "hubot-scripts": ">=2.0.8",
     "optparse": "1.0.3",
     "hubot-hipchat": "1.0.5"
